@@ -1,7 +1,7 @@
 <?php
 
 # Written by Simon Josefsson <simon@josefsson.org>.
-# Copyright (c) 2009-2012 Yubico AB
+# Copyright (c) 2009-2013 Yubico AB
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
