@@ -1,5 +1,7 @@
 * Version 1.12 (unreleased)
 
+  * Added COPYING file.
+
 * Version 1.11 (released 2013-01-31)
 
   * Added missing manprefix to Makefile.
